# modern-versatilepb

./: .clang-format  .gitignore  CMakeLists.txt  Readme  compile_flags.txt
FreeRTOS/: CMakeLists.txt
FreeRTOS/c++addon/: CMakeLists.txt
FreeRTOS/c++addon/include/: thread.hpp
FreeRTOS/kernel/: CMakeLists.txt
FreeRTOS/kernel/portable/GCC/: port.c  portmacro.h
FreeRTOS/kernel/portable/MemMang/: heap_6.c
app/: CMakeLists.txt  main.cpp
cpu/: CMakeLists.txt  cpu.c  cpu.h  exception_entry.S  exceptions.c  exceptions.h  init.c  mmu.c  vector.S
dload/: CMakeLists.txt  test.c
drivers/: CMakeLists.txt  connect.c  interrupt.c  regutil.h  timer.c  uart.c
gcov-stub/: CMakeLists.txt  gcov_gcc.c  gcov_gcc.h  gcov_printf.c  gcov_public.c  gcov_public.h
include/: FreeRTOSConfig.h  bsp.h  compiler.h  exceptions.h  interrupt.h  mmu.h  timer.h  uart.h
init/: CMakeLists.txt  init.c
newlib-stub/: CMakeLists.txt  entry.S  memory.c  noused.c  pl011.c  qemu.c
scripts/: arm-none-eabi.cmake  arm-none-eabi.ld  gcda-serial.py
